--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>某咸鱼的小站</title>
+    <title>星辰旅人的小站</title>
     <link rel="stylesheet" href="https://static-1.llilii.cn/libs/mdui/css/mdui.min.css" />
     <link rel="stylesheet" href="https://static-1.llilii.cn/css/mdx-icons.css" />
     <script src="https://static-1.llilii.cn/libs/mdui/js/mdui.min.js"></script>
@@ -25,7 +25,7 @@
         <div class="mdui-row">
             <div class="mdui-card mdui-center" style="border-radius: 3px;">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="https://img-1.llilii.cn/original-character/v2/avatar.png?ref=mypage" />
+                    <img class="mdui-card-header-avatar" src="https://wwwaaa123122.cn-nb1.rains3.com/Image_1751188839966.jpg" />
                     <div class="mdui-card-header-title">星辰旅人</div>
                     <div class="mdui-card-header-subtitle">太失败了</div>
                 </div>
@@ -40,7 +40,7 @@
                         <i class="mdx-sn-icon mdx_sn_email" mdui-tooltip="{content: '点击向我发送邮件', position: 'top'}" title="邮箱"></i>
                     </a>
                     <a target="_blank" href="https://github.com/wwwaaa123122">
-                        <i class="mdx-sn-icon mdx_sn_github" mdui-tooltip="{content: '@unknown-o', position: 'top'}" title="GitHub"></i>
+                        <i class="mdx-sn-icon mdx_sn_github" mdui-tooltip="{content: '@wwwaaa123122', position: 'top'}" title="GitHub"></i>
                 </div>
             </div>
         </div>
