--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -48,13 +47,14 @@
     <footer>
         <div style="text-align: center; margin-top:20px">
             <p>
-	<a href="https://icp.gov.moe/?keyword=20252123" target="_blank">萌ICP备20252123号</a>
+        <a href="https://icp.gov.moe/?keyword=20252123" target="_blank">萌ICP备20252123号</a>
             </p>
         </div>
     </footer>
     <script>
         function showEmail() {
-            window.open(atob("bWFpbHRvOmlAbXItd3UudG9w"))
+            // 修改为新的邮箱地址
+            window.open(atob("bWFpbHRvOnd3d2FhYTEyMzEyMkBvdXRsb29rLmNvbQ=="))
         }
     </script>
 </body>
