--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="mdui-card-header-subtitle">太失败了</div>
                 </div>
                 <div class="mdui-card-content">
-                    欢迎来到我的个人主页，但是这里什么都没有捏！
+                    欢迎来到我的个人主页，但是这里什么都没有捏！但你可以使用xc-lr.cn加入MC服务器哦。
                 </div>
                 <div class="mdui-card-actions mdui-float-right" style="margin-right: 15px">
                     <a target="_blank" href="https://space.bilibili.com/3493078983772353">
